# attend

./: .gitignore  Cargo.toml  EXTENDING.md  LICENSE  README.md  attend-browser-bridge  build.rs  clippy.toml
.claude-plugin/: marketplace.json
.github/workflows/: sign-extension.yml
benches/: e2e.rs
crates/macos-disclaim/: Cargo.toml
crates/macos-disclaim/src/: lib.rs  tests.rs
crates/mock-clock/: Cargo.toml  clippy.toml
crates/mock-clock/src/: lib.rs  tests.rs
crates/test-harness/: Cargo.toml  clippy.toml
crates/test-harness/src/: lib.rs  protocol.rs
docs/: commands.md  development.md  example-narration.md  extending-agents.md  extending-browsers.md  extending-editors.md  extending-shells.md  extending.md  getting-started.md  how-it-works.md  setup.md
docs/explanation/: architecture.md  how-it-works.md
docs/extending/: README.md  agents.md  browsers.md  development.md  editors.md  reference.md  shells.md
docs/how-to/: browser-integration.md  hotkeys.md  narrating-effectively.md  shell-integration.md  troubleshooting.md  uninstall.md
docs/reference/: commands.md  configuration.md  narration-format.md
docs/tutorial/: example-narration.md  getting-started.md
extension/: attend.xpi  background.js  content.js  manifest.chrome.json  manifest.json
plans/: CODE-REVIEW.md  PLAN.md  REVIEW-ORDER.md  SESSION-2026-03-12-tier4.md  hotkey-install-automation.md  phase-01-foundation.md  phase-02-type-safety.md  phase-03-module-reorg.md  phase-04-unsafe-elimination.md  phase-05-error-handling.md  phase-06-daemon-improvements.md  phase-07-agent-generalization.md  phase-08-ux-improvements.md  phase-11-persistent-daemon.md  phase-12-context-sources.md  phase-13-no-session.md  phase-13-shell-hooks.md  phase-14-loopback-capture.md  phase-14-pause.md  phase-15-shell-hooks.md  phase-17-loopback-capture.md  phase-18-persistent-daemon.md  phase-19e-clipboard-image-delivery.md  phase-20-phase0.md  phase-20-socket-daemon.md  phase-20-testing.md  phase-22-self-codesign.md  phase-23-code-review.md
plans/completed/: WALKTHROUGH-NOTES.md  phase-05-error-handling.md  phase-07-agent-generalization.md  phase-08-ux-improvements.md  phase-09-test-hardening.md  phase-10-merge-refactor.md  phase-12-zed-diff.md  phase-15-shell-hooks.md  phase-16-yank.md  phase-19-clipboard-capture.md
plans/deferred/: phase-21-harness-extraction.md  zed-vim-visual-line-selection.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/start/: SKILL.md
plugin/skills/stop/: SKILL.md
proptest-regressions/hook/tests/: prop.txt
proptest-regressions/view/: tests.txt
shortcuts/: Pause Narration.shortcut  Start Narration.shortcut  Toggle Narration.shortcut  Yank Narration.shortcut
src/: agent.rs  browser.rs  cli.rs  clock.rs  config.rs  db.rs  editor.rs  format.rs  hook.rs  instructions.txt  json.rs  main.rs  model.rs  narrate.rs  shell.rs  state.rs  terminal.rs  test_mode.rs  util.rs  view.rs  watch.rs
src/agent/: claude.rs  claude_skill.md  claude_skill_body.md  claude_skill_frontmatter.md  mod.rs
src/agent/claude/: hook_defs.json  input.rs  mod.rs  output.rs  settings.rs  skill_body.md  skill_frontmatter.md
src/agent/messages/: activate_response.txt  deactivate_response.txt  editor_context_instructions.txt  guidance_deactivated.txt  guidance_listener_active.txt  guidance_listener_started.txt  guidance_narration_ready.txt  guidance_session_moved.txt  guidance_start_receiver.txt  narration_pause.txt  narration_protocol.md
src/browser/: chrome.rs  firefox.rs
src/cli/: browser_bridge.rs  completions.rs  dictate.rs  glance.rs  hook.rs  install.rs  listen.rs  look.rs  meditate.rs  mod.rs  model.rs  narrate.rs  shell_hook.rs
src/cli/browser_bridge/: tests.rs
src/cli/install/: tests.rs
src/clock/: tests.rs
src/config/: tests.rs
src/dictate/: audio.rs  merge.rs  mod.rs  receive.rs  record.rs  tests.rs  transcribe.rs
src/dictate/merge/: tests.rs
src/dictate/receive/: tests.rs
src/dictate/snapshots/: attend__dictate__merge__tests__full_scenario_snapshot.snap
src/dictate/transcribe/: mod.rs  parakeet.rs  whisper.rs
src/editor/: mod.rs  zed.rs
src/editor/zed/: db.rs  health.rs  jsonc.rs  keybindings.rs  mod.rs  (+2 more)
src/hook/: command.rs  decision.rs  mod.rs  session_state.rs  tests.rs  types.rs  upgrade.rs
src/model/: tests.rs
src/narrate/: audio.rs  capture.rs  chime.rs  clean.rs  clipboard_capture.rs  diff_capture.rs  editor_capture.rs  ext_capture.rs  merge.rs  mod.rs  ops.rs  receive.rs  record.rs  render.rs  silence.rs  status.rs  tests.rs  transcribe.rs
src/shell/: fish.rs  zsh.rs
src/state/: cache.rs  compact.rs  editor.rs  paths.rs  resolve.rs  session_id.rs  tests.rs
src/terminal/: tests.rs
src/test_mode/: stubs.rs  tests.rs
src/util/: mod.rs  tests.rs
src/view/: annotate.rs  capture.rs  detect.rs  gfm_languages.rs  json.rs  mod.rs  parse.rs  tests.rs
tests/: e2e.rs
tools/xtask/: Cargo.toml
(+54 files in other folders)
