[package]
name = "attend"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Give your coding agent eyes and ears in your editor"
repository = "https://github.com/oxidecomputer/attend"
readme = "README.md"
keywords = ["cli", "editor", "agent", "narration", "pair-programming"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "color"] }
crossterm = "0.28"
clap_complete = "4"
dirs = "6"
camino = { version = "1", features = ["serde1"] }
chrono = "0.4"
fundsp = "0.23"
indicatif = "0.18"
jsonc-parser = { version = "0.29", features = ["serde"] }
nix = { version = "0.31", features = ["signal", "process"] }
lockfile = "0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
humantime = "2"
signal-hook = "0.4"
which = "8"

whisper-rs = "0.15"
parakeet-rs = "0.3"
webrtc-vad = "0.4"
cpal = "0.17"
rubato = "1"
audioadapter-buffers = "2"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
proptest = "1"
tempfile = "3"

[[bench]]
name = "e2e"
harness = false
