[workspace]
members = [".", "tools/xtask"]

[package]
name = "attend"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Give your coding agent eyes and ears in your editor"
repository = "https://github.com/oxidecomputer/attend"
readme = "README.md"
keywords = ["cli", "editor", "agent", "narration", "pair-programming"]
categories = ["command-line-utilities", "development-tools"]

# The objc 0.2 crate's sel_impl! macro checks cfg(feature = "cargo-clippy"),
# which is not a real feature. Suppress the resulting unexpected_cfgs warnings.
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "color"] }
crossterm = "0.29"
clap_complete = "4"
dirs = "6"
camino = { version = "1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
fundsp = "0.23"
jsonc-parser = { version = "0.29", features = ["serde", "cst"] }
nix = { version = "0.31", features = ["signal", "process"] }
lockfile = "0.4"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
humantime = "2"
signal-hook = "0.4"
which = "8"

whisper-rs = "0.15"
parakeet-rs = "0.3"
webrtc-vad = "0.4"
cpal = "0.17"
rubato = "1"
audioadapter-buffers = "2"
sha2 = "0.10"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3"
native_messaging = "0.2"
htmd = "0.5.0"
hyperpolyglot = "0.1"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
uuid = { version = "1.21.0", features = ["v4"] }
base64 = "0.22.1"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2"
accessibility-sys = "0.2"
core-foundation = "0.10"
objc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
insta = "1"
proptest = "1"
serde_yaml = "0.9"

[[bench]]
name = "e2e"
harness = false
